--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,9 @@ a.link:hover, .logo:hover {
   .list:hover {
     background-position: -144px -48px; }
 
+.listselect {
+  background-position: -144px -48px; }
+
 .playing {
   background-position: -48px 0; }
   .playing:hover {
@@ -178,6 +181,7 @@ a.link:hover, .logo:hover {
   width: 256px; }
 
 .nowplaying {
+  display: none;
   float: left;
   background-color: #FFFFFF;
   border-bottom: #efefef 1px solid;
@@ -185,21 +189,26 @@ a.link:hover, .logo:hover {
   height: 64px;
   z-index: 2; }
   .nowplaying h1 {
-    line-height: 36px;
-    font-size: 1em;
-    color: #000000; }
-  .nowplaying h2 {
-    padding-left: 16px;
-    float: left;
     line-height: 24px;
+    font-size: 16px;
+    font-size: 1em;
+    font-size: 1rem;
+    color: #000000;
+    text-overflow: ellipsis; }
+  .nowplaying h2 {
+    margin-top: 8px;
+    line-height: 18px;
+    font-size: 12px;
     font-size: 0.75em;
+    font-size: 0.75rem;
     color: #FF7729; }
 
 .albumart {
   float: left;
   height: 64px;
   width: 64px;
-  background-color: #FF7729; }
+  background-color: #FF7729;
+  margin-right: 8px; }
 
 .tracklist {
   display: none;
