--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,6 +137,9 @@ a.link:hover, .logo:hover{
 		background-position: -144px -48px;
 	}
 }
+.listselect{
+	background-position: -144px -48px;
+}
 .playing {
 	background-position: -48px 0;
 	&:hover{
@@ -149,6 +152,7 @@ a.link:hover, .logo:hover{
 	width: 256px;
 }
 .nowplaying{
+	display: none;
 	float: left;
 	background-color: #FFFFFF;
 	border-bottom: #EFEFEF 1px solid;
@@ -156,15 +160,19 @@ a.link:hover, .logo:hover{
 	height: 64px; 
 	z-index: 2;
 	h1{
-		line-height: 36px;
+		line-height: 24px;
+		font-size: 16px;
 		font-size: 1em;
+		font-size: 1rem;
 		color: #000000;
+		text-overflow: ellipsis;
 	}
 	h2{
-		padding-left: 16px;
-		float: left;
-		line-height: 24px;
+		margin-top: 8px;
+		line-height: 18px;
+		font-size: 12px;
 		font-size: 0.75em;
+		font-size: 0.75rem;
 		color: #FF7729;
 	}
 }
@@ -173,6 +181,7 @@ a.link:hover, .logo:hover{
 	height: 64px;
 	width: 64px;
 	background-color: #FF7729;
+	margin-right: 8px;
 }
 .tracklist{
 	display: none;
